--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,6 +2,8 @@
 @import "global/base";
 @import "global/container";
 @import "global/colors";
+@import "global/fonts";
+@import "global/typography";
 
 @import "layout/main";
 @import "layout/app";
