--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -4,6 +4,11 @@
   position: relative;
   z-index: 2;
   border-bottom: 1px solid var(--border-color);
+  margin-bottom: 5rem;
+
+  @include --mobile {
+    margin-bottom: 4rem;
+  }
 
   &__inner {
     padding: 2.4rem 0;
