--- a/src/scss/utils/_typography.scss
+++ b/src/scss/utils/_typography.scss
@@ -1,5 +1,11 @@
 @import "container";
 
+@mixin text-h2 {
+  font-weight: 700;
+  font-size: 3.6rem;
+  line-height: 3.6rem;
+}
+
 @mixin text {
   font-weight: 500;
   font-size: 1.6rem;
