--- a/src/scss/modules/_app-background.scss
+++ b/src/scss/modules/_app-background.scss
@@ -5,28 +5,34 @@
   width: 100vw;
   height: 100vh;
 
+  &__parallax-origin {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  }
+
   img {
     &:nth-child(1) {
       position: absolute;
       top: -20%;
-      left: -20%;
+      left: -10%;
     }
 
     &:nth-child(2) {
       position: absolute;
       top: -20%;
-      right: -20%;
+      right: -10%;
     }
 
     &:nth-child(3) {
       position: absolute;
-      left: -20%;
+      left: -10%;
       bottom: -20%;
     }
 
     &:nth-child(4) {
       position: absolute;
-      right: -20%;
+      right: -10%;
       bottom: -20%;
     }
   }
